changed some language in header/about sections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Software Engineer based in Austin, TX. Interested in exploring the linguistics of code.
+            <p class="text-faded mb-5">Software Engineer based in Austin, TX. Interested in utilizing the linguistics of code to shape the culture of technology.
             </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#contact">Contact</a>
           </div>
@@ -80,9 +80,9 @@
             <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Over my time living in Austin, TX and St Andrews, Scotland
-              I've developed a love of understanding different cultures. I started out as a linguist,
-              so I tend to view language as the key to developing that understanding. Now, in the tech
-              world, I aim to use language to understand the underlying "culture" of technologies.
+              I've been fascinated by the process of developing an understanding of different cultures. I started out as a linguist,
+              so I tend to view language as the key to that process. Now, in the tech
+              world, I aim to use language to understand and shape the underlying "culture" of technologies.
             </p>
           </div>
         </div>
